Export collapse in panel, fix delete icon rendering

--- a/src/style/sections/exports/exports.less
+++ b/src/style/sections/exports/exports.less
@@ -92,3 +92,12 @@
     display: flex;
     justify-content: center;
 }
+
+.layer-exports__delete-button {
+    svg {
+        width: 1.6rem;
+        height: 1.6rem;
+        fill:  @color-subsection-rule;
+        stroke: none;
+    }
+}
